fix: fix styles, remove unnecessary whitespaces in template

--- a/src/index.css
+++ b/src/index.css
@@ -28,17 +28,6 @@ h1 {
 }
 
 .card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.card {
   padding: 32px 8px;
   border-radius: 16px;
   background-color: #151b23;
